# opengl-learn

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
res/shaders/: Basic.shader  BlinnPhong.shader  BlinnPhongDiffuse.shader  Cube.shader
src/: GLErrorHandler.cpp  GLErrorHandler.h  Renderer.cpp  Renderer.h  main.cpp
src/buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/mesh/: STLReader.cpp  STLReader.h
src/shader/: Shader.cpp  Shader.h
src/test/: Test.cpp  Test.h  TestBlinnPhong.cpp  TestBlinnPhong.h  TestBlinnPhongDiffuse.cpp  TestBlinnPhongDiffuse.h  TestCube.cpp  TestCube.h  TestMenu.cpp  TestMenu.h  TestSTL.cpp  TestSTL.h  TestTextureSquare.cpp  TestTextureSquare.h
src/texture/: Texture.cpp  Texture.h
